# lzlib-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: main.yml
lzlib/: Cargo.toml
lzlib-sys/: Cargo.toml  build.rs  wrapper.h
lzlib-sys/src/: lib.rs
lzlib/src/: lib.rs  read.rs  write.rs
lzlib/tests/: main.rs
lzlib/tests/data/: .gitattributes
lzlib/tests/data/fox_lf.lz/: level_9.lz
lzlib/tests/data/test.txt.lz/: level_0.lz  level_1.lz  level_2.lz  level_3.lz  level_4.lz  level_5.lz  level_6.lz  level_7.lz  level_9.lz
